--- a/DemoTest/src/main/res/layout/activity_content.xml
+++ b/DemoTest/src/main/res/layout/activity_content.xml
@@ -9,4 +9,10 @@
         android:id="@+id/selected_item"
         android:text="Hello World!" />
 
+    <Button
+        android:id="@+id/btn_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"/>
+
 </LinearLayout>
