--- a/WheelPicker/src/main/res/values/arrays.xml
+++ b/WheelPicker/src/main/res/values/arrays.xml
@@ -6,7 +6,7 @@
         <item>爱哥</item>
         <item>الحب  اخي</item>
         <item>jeg elsker</item>
-        <item>사랑해요 형</item>
+        <item>안녕하세요</item>
         <item>Amor de irmão</item>
         <item>armastan</item>
         <item>愛の兄</item>
